--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -119,56 +119,56 @@ spa:
       #>price_create: 'Add a new price'
       #>prices: 'Prices'
       #>prices_import: 'Import prices in CSV'
-      #>product: 'Product: {{name}}'
-      #>product_component_create: 'Add a new component to {{product}}'
-      #>product_component_update: 'Edit the component of {{product}} '
+      #>product: 'Product: %{name}'
+      #>product_component_create: 'Add a new component to %{product}'
+      #>product_component_update: 'Edit the component of %{product} '
       #>product_create: 'Add a new product'
-      #>product_update: 'Edit the product: {{name}}'
+      #>product_update: 'Edit the product: %{name}'
       #>products: 'Products'
-      #>purchase_order: 'Details of the purchase {{number}} au fournisseur {{supplier}} '
+      #>purchase_order: 'Details of the purchase %{number} au fournisseur %{supplier} '
       #>purchase_order_create: 'New purchase order'
-      #>purchase_order_line_create: 'Add a product to the purchase: {{number}}'
+      #>purchase_order_line_create: 'Add a product to the purchase: %{number}'
       #>purchase_order_line_update: 'Edit the purhase order line'
-      #>purchase_order_lines: 'Products of the purchase {{number}} to the supplier {{supplier}}'
-      #>purchase_order_summary: 'Payments of the purchase order {{number}}'
-      #>purchase_order_update: 'Edit the purchase order: {{number}}'
+      #>purchase_order_lines: 'Products of the purchase %{number} to the supplier %{supplier}'
+      #>purchase_order_summary: 'Payments of the purchase order %{number}'
+      #>purchase_order_update: 'Edit the purchase order: %{number}'
       #>purchase_orders: 'Purchase orders'
-      #>purchase_payment: 'Purchase payment #{{number}} for {{payee}}'
+      #>purchase_payment: 'Purchase payment #%{number} for %{payee}'
       #>purchase_payment_create: 'Add a new purchase payment'
       #>purchase_payment_mode_create: 'Add a new purchase payment mode'
       #>purchase_payment_mode_update: 'Edit the purchase payment mode'
       #>purchase_payment_modes: 'Purchase payments modes'
-      #>purchase_payment_part_create: 'Pay the purchase order {{number}}'
-      #>purchase_payment_update: 'Edit the purchase payment: {{number}}'
+      #>purchase_payment_part_create: 'Pay the purchase order %{number}'
+      #>purchase_payment_update: 'Edit the purchase payment: %{number}'
       #>purchase_payments: 'Purchase payments'
-      #>sale_order: 'Sale order {{number}}'
+      #>sale_order: 'Sale order %{number}'
       #>sale_order_create: 'New sale order'
       #>sale_order_deliveries: 'Deliveries'
       #>sale_order_line_create: 'Add a new line of product'
       #>sale_order_line_informations: ''
       #>sale_order_line_update: 'Edit sale order line'
-      #>sale_order_lines: 'Selection of the products for the estimate {{sale_order}}'
+      #>sale_order_lines: 'Selection of the products for the estimate %{sale_order}'
       #>sale_order_nature_create: 'Add a new type of sale'
-      #>sale_order_nature_update: 'Edit the sale order nature: {{name}}'
+      #>sale_order_nature_update: 'Edit the sale order nature: %{name}'
       #>sale_order_natures: 'Sale order natures'
-      #>sale_order_summary: 'Invoice and payments of the sale order {{number}}'
-      #>sale_order_update: 'Edit the sale order {{number}}'
+      #>sale_order_summary: 'Invoice and payments of the sale order %{number}'
+      #>sale_order_update: 'Edit the sale order %{number}'
       #>sale_orders: 'Estimates and orders'
-      #>sale_payment: 'Sale payment {{number}} de {{entity}}'
+      #>sale_payment: 'Sale payment %{number} de %{entity}'
       #>sale_payment_create: 'Add a new sale payment'
       #>sale_payment_mode_create: 'Add a new sale payment mode'
-      #>sale_payment_mode_update: 'Edit the sale payment mode: {{name}}'
+      #>sale_payment_mode_update: 'Edit the sale payment mode: %{name}'
       #>sale_payment_modes: 'Sale payment modes'
-      #>sale_payment_part_create: 'Add a new sale payment: {{type}} N°{{number}}'
-      #>sale_payment_update: 'Edit the sale payment {{number}}'
+      #>sale_payment_part_create: 'Add a new sale payment: %{type} N°%{number}'
+      #>sale_payment_update: 'Edit the sale payment %{number}'
       #>sale_payments: 'Sale payments'
-      #>shelf: 'Shelf: {{name}}'
+      #>shelf: 'Shelf: %{name}'
       #>shelf_create: 'Add a new shelf'
-      #>shelf_update: 'Edit the shelf: {{name}}'
+      #>shelf_update: 'Edit the shelf: %{name}'
       #>shelves: 'Shelves'
       #>statistics: 'Statistics'
       #>stock_move_create: 'add a new stock move'
-      #>stock_move_update: 'Edit the stock move: {{name}}'
+      #>stock_move_update: 'Edit the stock move: %{name}'
       #>stock_transfer_create: 'Add a new stock transfer or loss'
       #>stock_transfer_update: 'Edit the stock transfer/loss'
       #>stock_transfers: 'Transfers and loss'
@@ -176,12 +176,12 @@ spa:
       #>subscription_create: 'Add anew subscription'
       #>subscription_message: ''
       #>subscription_nature_create: 'Add a new subscription nature'
-      #>subscription_nature_update: 'Edit the subscription nature: {{name}}'
+      #>subscription_nature_update: 'Edit the subscription nature: %{name}'
       #>subscription_natures: 'Subscription natures'
-      #>subscription_update: 'Update subscription: {{number}} from {{start}} to {{finish}}'
+      #>subscription_update: 'Update subscription: %{number} from %{start} to %{finish}'
       #>subscriptions: 'Subscriptions'
-      #>tracking: 'Tracking: {{name}}'
-      #>transport: 'Transport of {{created_on}}'
+      #>tracking: 'Tracking: %{name}'
+      #>transport: 'Transport of %{created_on}'
       #>transport_create: 'Add a new transport'
       #>transport_deliveries: 'Deliveries of transport'
       #>transport_update: 'Edit the transport'
@@ -192,59 +192,59 @@ spa:
       #>unvalidated_embankments: 'Waiting embankments'
     production:
       #>index: 'Production Management'
-      #>operation: 'Operation Details {{name}}'
+      #>operation: 'Operation Details %{name}'
       #>operation_create: 'Create a new Operation'
       #>operation_nature_create: 'Create a new type of Operation'
-      #>operation_nature_update: 'update Type of Operation: {{name}}'
+      #>operation_nature_update: 'update Type of Operation: %{name}'
       #>operation_natures: 'Types of Operation'
-      #>operation_update: 'Update Operation {{name}}'
+      #>operation_update: 'Update Operation %{name}'
       #>operations: 'Opetations'
-      #>shape: 'Shape {{name}}'
+      #>shape: 'Shape %{name}'
       #>shape_create: 'Add a new shape'
-      #>shape_update: 'Update Shape: {{name}}'
+      #>shape_update: 'Update Shape: %{name}'
       #>shapes: 'Shapes'
-      #>tool: 'Tool: {{name}}'
+      #>tool: 'Tool: %{name}'
       #>tool_create: 'Add a tool'
-      #>tool_update: 'Update tool: {{name}}'
+      #>tool_update: 'Update tool: %{name}'
       #>tools: 'Tools'
       #>unvalidated_operations: 'Operations to be Performed'
     relations:
       #>area_create: 'Add a postal area'
-      #>area_update: 'Edit the postal area: {{name}}'
+      #>area_update: 'Edit the postal area: %{name}'
       #>areas: 'Postal areas'
-      #>complement: 'Personalized fields: {{name}}'
+      #>complement: 'Personalized fields: %{name}'
       #>complement_choice_create: 'Add a new option for a choices list'
-      #>complement_choice_update: 'Edit the option: {{name}}'
+      #>complement_choice_update: 'Edit the option: %{name}'
       #>complement_create: 'Add a new personalized field'
-      #>complement_update: 'Edit the personalized field: {{name}}'
+      #>complement_update: 'Edit the personalized field: %{name}'
       #>complements: 'Personalized fields'
       #>contact_create: 'Add a new contact'
-      #>contact_update: 'Edit the contact of {{entity}}'
+      #>contact_update: 'Edit the contact of %{entity}'
       #>district_create: 'Add a new district'
-      #>district_update: 'Edit the district: {{name}}'
+      #>district_update: 'Edit the district: %{name}'
       #>districts: 'Districts'
       #>entities: 'People'
       #>entities_export: 'Export people'
       #>entities_import: 'Import people'
       #>entities_merge: 'Merge two people'
-      #>entity: 'Person: {{full_name}}'
+      #>entity: 'Person: %{full_name}'
       #>entity_categories: 'Person categories'
-      #>entity_category: 'Person category: {{name}}'
+      #>entity_category: 'Person category: %{name}'
       #>entity_category_create: 'Add a new person category'
-      #>entity_category_update: 'Edit the person category: {{name}}'
+      #>entity_category_update: 'Edit the person category: %{name}'
       #>entity_create: 'Add a new person'
       #>entity_link_create: 'Add a new link'
       #>entity_link_nature_create: 'Add a new link type'
-      #>entity_link_nature_update: 'Edit the link type: {{name}}'
+      #>entity_link_nature_update: 'Edit the link type: %{name}'
       #>entity_link_natures: 'Link types'
       #>entity_link_update: 'Edit the link'
       #>entity_nature_create: 'Add a new person type'
-      #>entity_nature_update: 'Edit the person type: {{name}}'
+      #>entity_nature_update: 'Edit the person type: %{name}'
       #>entity_natures: 'Person types'
-      #>entity_update: 'Edit person: {{full_name}}'
+      #>entity_update: 'Edit person: %{full_name}'
       #>event_create: 'Add a new event'
       #>event_nature_create: 'Add a new event type'
-      #>event_nature_update: 'Edit thee event type: {{name}}'
+      #>event_nature_update: 'Edit thee event type: %{name}'
       #>event_natures: 'Event types'
       #>event_update: 'Update the event'
       #>events: 'Events'
@@ -330,7 +330,7 @@ spa:
     #>are_you_sure_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
     #>are_you_sure_to_invoice: 'Are you sure you want to invoice?'
     are_you_sure_to_send_mails: 'Esta seguro querer enviar este correo electronico?'''
-    #>area_x: '{{name}} ({{postcode}})'
+    #>area_x: '%{name} (%{postcode})'
     assessable_operations: 'Operaciones imponibles (H.T)'
     assimilated_tax: 'Tarifas asimiladas calculadas sobre anexo n°3310A'
     attachment: 'Pieza juntada'
@@ -358,9 +358,9 @@ spa:
     #>canals: 'Canals'
     #>cancel: 'Cancel'
     cancelled: 'Pasar en activos'
-    cash:  #! String excepted (Hash:{:embankments=>"Entregas en banca", :bank_statements=>"Leventar de cuento"})
-      bank_statements: 'Leventar de cuento' #! String excepted (Hash:{:embankments=>"Entregas en banca", :bank_statements=>"Leventar de cuento"})
-      embankments: 'Entregas en banca' #! String excepted (Hash:{:embankments=>"Entregas en banca", :bank_statements=>"Leventar de cuento"})
+    cash:  #! String excepted (Hash:{:bank_statements=>"Leventar de cuento", :embankments=>"Entregas en banca"})
+      bank_statements: 'Leventar de cuento' #! String excepted (Hash:{:bank_statements=>"Leventar de cuento", :embankments=>"Entregas en banca"})
+      embankments: 'Entregas en banca' #! String excepted (Hash:{:bank_statements=>"Leventar de cuento", :embankments=>"Entregas en banca"})
     cash_tabbox:
       #>bank_statements: 'Bank statements'
       #>embankments: 'Embankments'
@@ -417,13 +417,13 @@ spa:
       #>zero: 'Zero'
     #>contains: 'Contains'
     #>coordinates: 'Coordinates'
-    #>copy_of: 'Copy of {{source}}'
+    #>copy_of: 'Copy of %{source}'
     cost_income_statement: 'Cargas'
     cost_sum: 'Total cargas de explotación'
     counts_by_nature: 'Nombre de piezas a contabilizar por tipo'
     #>create: 'Create'
     create_journal: '-- Crear el periodico --'
-    #>created_between: 'Created between {{started_on}} and {{stopped_on}}'
+    #>created_between: 'Created between %{started_on} and %{stopped_on}'
     #>created_on: 'Created on'
     credit: 'Credito'
     credits: 'Activos'
@@ -454,7 +454,7 @@ spa:
     #>discount: 'Discount (%)'
     #>display: 'Display'
     #>display_help: 'Display help'
-    #>district_x: '{{name}} ({{code}})'
+    #>district_x: '%{name} (%{code})'
     document_natures: 'Tipos de documentos'
     document_template_create: 'Crear un modelo de documento' #!
     document_templates: 'Modelos de documentos'
@@ -509,7 +509,7 @@ spa:
       one: ' Acontecimiento de tipo {{nature}} de duración {{duration}} minutas' #!
       other: ' {{count}} acontecimiento de tipo {{nature}} para une duración total de {{duration}} minutas' #!
       zero: ' Ningun acontecimiento de tipo {{nature}}' #!
-    #>example: 'Example&nbsp;: {{value}}'
+    #>example: 'Example&nbsp;: %{value}'
     #>executed: 'Executed'
     #>existing_part: 'Existing part'
     #>exit: 'Exit'
@@ -549,7 +549,7 @@ spa:
     home: 'Vuelta a la cogida de la ayuda'
     hour_duration:
       #>one: 'Total used time: 1 hour'
-      #>other: 'Total used time: 1 hour: {{count}} hours'
+      #>other: 'Total used time: 1 hour: %{count} hours'
       #>zero: 'No Time used'
     iban: 'Numero de cuento bancario internacional (IBAN)'
     #>identification: 'Identification'
@@ -613,10 +613,10 @@ spa:
       clients: 'Clientes'
       suppliers: 'abastecedores'
       title: 'Catégorias de tercios'
-    #>line: 'Line #{{index}} :'
+    #>line: 'Line #%{index} :'
     line_amount: 'PU HT'
     line_amount_with_taxes: 'PU TTC'
-    #>line_stock: 'Warehouse: {{location}}, available quantity: {{virtual_q}}'
+    #>line_stock: 'Warehouse: %{location}, available quantity: %{virtual_q}'
     listing_create: 'Craer una nueva extracción' #!
     listing_extract: 'Ejecutar la extracción'
     listing_mail: 'Enviar un correo electronico'
@@ -647,7 +647,7 @@ spa:
     management_rights: 'Derechos modulo comercio'
     mandates:
       #>one: 'One mandate'
-      #>other: '{{count}} mandates'
+      #>other: '%{count} mandates'
       #>zero: 'No mandates'
     #>mandates_fields: 'You have to fill at least one field'
     #>mandates_filters: 'You have to fill at least one filter'
@@ -695,7 +695,7 @@ spa:
       zero: 'Ningun aposto en banco a validar'
     nb_entities:
       #>one: 'One person'
-      #>other: '{{count}} people'
+      #>other: '%{count} people'
       #>zero: 'No people'
     nb_entries:
       one: 'La escritura'
@@ -707,11 +707,11 @@ spa:
       #>zero: '0 invoices'
     nb_mandates:
       #>one: 'One mandate'
-      #>other: '{{count}} mandates'
+      #>other: '%{count} mandates'
       #>zero: 'No mandates'
     nb_operations:
       #>one: '1 Operation performed'
-      #>other: '{{count}} Operation performed'
+      #>other: '%{count} Operation performed'
       #>zero: 'No Operation performed'
     nb_payments:
       #>one: '1 sale payment to embank'
@@ -719,7 +719,7 @@ spa:
       #>zero: 'No sale payments to embank'
     nb_products:
       #>one: 'One product'
-      #>other: '{{count}} products'
+      #>other: '%{count} products'
       #>zero: 'No products'
     nb_purchases:
       one: 'Una compra en espera de recepción'
@@ -731,7 +731,7 @@ spa:
       zero: 'Ningun encargo'
     nb_transfers:
       #>one: 'One transfert to make'
-      #>other: '{{count}} transferts to make'
+      #>other: '%{count} transferts to make'
       #>zero: 'No transferts to make'
     nb_waiting_deliveries:
       #>one: '1 waiting delivery'
@@ -994,8 +994,8 @@ spa:
     #>string_case: 'String case'
     subject: 'Tema'
     #>submit: 'Submit'
-    #>subscriber_period: 'Subscribed on {{subscribed_on}}'
-    #>subscriber_quantity: 'Subscribed at the number {{subscribed_on}}'
+    #>subscriber_period: 'Subscribed on %{subscribed_on}'
+    #>subscriber_quantity: 'Subscribed at the number %{subscribed_on}'
     #>subscription_nature: 'Subscription nature'
     #>subscription_natures_down: 'Decrement actual number (-1)'
     #>subscription_natures_up: 'Increment actual number (+1)'
@@ -1074,9 +1074,9 @@ spa:
       #>other: '%{count} events'
       #>zero: '0 events'
     x_events_of_nature_y:
-      #>one: 'One event {{nature}} for a total duration of {{duration}} minutes'
-      #>other: '{{count}} events {{nature}} for a total duration of {{duration}} minutes'
-      #>zero: 'No events {{nature}}'
+      #>one: 'One event %{nature} for a total duration of %{duration} minutes'
+      #>other: '%{count} events %{nature} for a total duration of %{duration} minutes'
+      #>zero: 'No events %{nature}'
     x_invoices:
       #>one: '1 invoice'
       #>other: '%{count} invoices'
@@ -1098,8 +1098,8 @@ spa:
       #>other: '%{count} sale orders'
       #>zero: '0 sale orders'
     x_sale_payments:
-      #>one: '{{count}} sale payment'
-      #>other: '{{count}} sale payments'
+      #>one: '%{count} sale payment'
+      #>other: '%{count} sale payments'
       #>zero: 'No sale payments'
     x_subscriptions:
       #>one: '1 subscription'
