--- a/config/locales/arb/countries.yml
+++ b/config/locales/arb/countries.yml
@@ -1,248 +1,248 @@
 arb:
   countries:
-    #>ad: 'Andorra'
-    #>ae: 'United Arab Emirates'
-    #>af: 'Afghanistan'
-    #>ag: 'Antigua and Barbuda'
-    #>ai: 'Anguilla'
-    #>al: 'Albania'
-    #>am: 'Armenia'
-    #>an: 'Netherlands Antilles'
-    #>ao: 'Angola'
-    #>aq: 'Antarctica'
-    #>ar: 'Argentina'
-    #>as: 'American Samoa'
-    #>at: 'Austria'
-    #>au: 'Australia'
-    #>aw: 'Aruba'
-    #>ax: 'Åland Islands'
-    #>az: 'Azerbaijan'
-    #>ba: 'Bosnia and Herzegovina'
-    #>bb: 'Barbados'
-    #>bd: 'Bangladesh'
-    #>be: 'Belgium'
-    #>bf: 'Burkina Faso'
-    #>bg: 'Bulgaria'
-    #>bh: 'Bahrain'
-    #>bi: 'Burundi'
-    #>bj: 'Benin'
-    #>bl: 'Saint Barthélemy'
-    #>bm: 'Bermuda'
-    #>bn: 'Brunei Darussalam'
-    #>bo: 'Bolivia, Plurinational State of'
-    #>br: 'Brazil'
-    #>bs: 'Bahamas'
-    #>bt: 'Bhutan'
-    #>bv: 'Bouvet Island'
-    #>bw: 'Botswana'
-    #>by: 'Belarus'
-    #>bz: 'Belize'
-    #>ca: 'Canada'
-    #>cc: 'Cocos (Keeling) Islands'
-    #>cd: 'Congo, the Democratic Republic of the'
-    #>cf: 'Central African Republic'
-    #>cg: 'Congo'
-    #>ch: 'Switzerland'
-    #>ci: 'Côte d''Ivoire'
-    #>ck: 'Cook Islands'
-    #>cl: 'Chile'
-    #>cm: 'Cameroon'
-    #>cn: 'China'
-    #>co: 'Colombia'
-    #>cr: 'Costa Rica'
-    #>cu: 'Cuba'
-    #>cv: 'Cape Verde'
-    #>cx: 'Christmas Island'
-    #>cy: 'Cyprus'
-    #>cz: 'Czech Republic'
-    #>de: 'Germany'
-    #>dj: 'Djibouti'
-    #>dk: 'Denmark'
-    #>dm: 'Dominica'
-    #>do: 'Dominican Republic'
-    #>dz: 'Algeria'
-    #>ec: 'Ecuador'
-    #>ee: 'Estonia'
-    #>eg: 'Egypt'
-    #>eh: 'Western Sahara'
-    #>er: 'Eritrea'
-    #>es: 'Spain'
-    #>et: 'Ethiopia'
-    #>fi: 'Finland'
-    #>fj: 'Fiji'
-    #>fk: 'Falkland Islands (Malvinas)'
-    #>fm: 'Micronesia, Federated States of'
-    #>fo: 'Faroe Islands'
-    #>fr: 'France'
-    #>ga: 'Gabon'
-    #>gb: 'United Kingdom'
-    #>gd: 'Grenada'
-    #>ge: 'Georgia'
-    #>gf: 'French Guiana'
-    #>gg: 'Guernsey'
-    #>gh: 'Ghana'
-    #>gi: 'Gibraltar'
-    #>gl: 'Greenland'
-    #>gm: 'Gambia'
-    #>gn: 'Guinea'
-    #>gp: 'Guadeloupe'
-    #>gq: 'Equatorial Guinea'
-    #>gr: 'Greece'
-    #>gs: 'South Georgia and the South Sandwich Islands'
-    #>gt: 'Guatemala'
-    #>gu: 'Guam'
-    #>gw: 'Guinea-Bissau'
-    #>gy: 'Guyana'
-    #>hk: 'Hong Kong'
-    #>hm: 'Heard Island and McDonald Islands'
-    #>hn: 'Honduras'
-    #>hr: 'Croatia'
-    #>ht: 'Haiti'
-    #>hu: 'Hungary'
-    #>id: 'Indonesia'
-    #>ie: 'Ireland'
-    #>il: 'Israel'
-    #>im: 'Isle of Man'
-    #>in: 'India'
-    #>io: 'British Indian Ocean Territory'
-    #>iq: 'Iraq'
-    #>ir: 'Iran, Islamic Republic of'
-    #>is: 'Iceland'
-    #>it: 'Italy'
-    #>je: 'Jersey'
-    #>jm: 'Jamaica'
-    #>jo: 'Jordan'
-    #>jp: 'Japan'
-    #>ke: 'Kenya'
-    #>kg: 'Kyrgyzstan'
-    #>kh: 'Cambodia'
-    #>ki: 'Kiribati'
-    #>km: 'Comoros'
-    #>kn: 'Saint Kitts and Nevis'
-    #>kp: 'Korea, Democratic People''s Republic of'
-    #>kr: 'Korea, Republic of'
-    #>kw: 'Kuwait'
-    #>ky: 'Cayman Islands'
-    #>kz: 'Kazakhstan'
-    #>la: 'Lao People''s Democratic Republic'
-    #>lb: 'Lebanon'
-    #>lc: 'Saint Lucia'
-    #>li: 'Liechtenstein'
-    #>lk: 'Sri Lanka'
-    #>lr: 'Liberia'
-    #>ls: 'Lesotho'
-    #>lt: 'Lithuania'
-    #>lu: 'Luxembourg'
-    #>lv: 'Latvia'
-    #>ly: 'Libyan Arab Jamahiriya'
-    #>ma: 'Morocco'
-    #>mc: 'Monaco'
-    #>md: 'Moldova, Republic of'
-    #>me: 'Montenegro'
-    #>mf: 'Saint Martin (French part)'
-    #>mg: 'Madagascar'
-    #>mh: 'Marshall Islands'
-    #>mk: 'Macedonia, the former Yugoslav Republic of'
-    #>ml: 'Mali'
-    #>mm: 'Myanmar'
-    #>mn: 'Mongolia'
-    #>mo: 'Macao'
-    #>mp: 'Northern Mariana Islands'
-    #>mq: 'Martinique'
-    #>mr: 'Mauritania'
-    #>ms: 'Montserrat'
-    #>mt: 'Malta'
-    #>mu: 'Mauritius'
-    #>mv: 'Maldives'
-    #>mw: 'Malawi'
-    #>mx: 'Mexico'
-    #>my: 'Malaysia'
-    #>mz: 'Mozambique'
-    #>na: 'Namibia'
-    #>nc: 'New Caledonia'
-    #>ne: 'Niger'
-    #>nf: 'Norfolk Island'
-    #>ng: 'Nigeria'
-    #>ni: 'Nicaragua'
-    #>nl: 'Netherlands'
-    #>no: 'Norway'
-    #>np: 'Nepal'
-    #>nr: 'Nauru'
-    #>nu: 'Niue'
-    #>nz: 'New Zealand'
-    #>om: 'Oman'
-    #>pa: 'Panama'
-    #>pe: 'Peru'
-    #>pf: 'French Polynesia'
-    #>pg: 'Papua New Guinea'
-    #>ph: 'Philippines'
-    #>pk: 'Pakistan'
-    #>pl: 'Poland'
-    #>pm: 'Saint Pierre and Miquelon'
-    #>pn: 'Pitcairn'
-    #>pr: 'Puerto Rico'
-    #>ps: 'Palestinian Territory, Occupied'
-    #>pt: 'Portugal'
-    #>pw: 'Palau'
-    #>py: 'Paraguay'
-    #>qa: 'Qatar'
-    #>re: 'Réunion'
-    #>ro: 'Romania'
-    #>rs: 'Serbia'
-    #>ru: 'Russian Federation'
-    #>rw: 'Rwanda'
-    #>sa: 'Saudi Arabia'
-    #>sb: 'Solomon Islands'
-    #>sc: 'Seychelles'
-    #>sd: 'Sudan'
-    #>se: 'Sweden'
-    #>sg: 'Singapore'
-    #>sh: 'Saint Helena, Ascension and Tristan da Cunha'
-    #>si: 'Slovenia'
-    #>sj: 'Svalbard and Jan Mayen'
-    #>sk: 'Slovakia'
-    #>sl: 'Sierra Leone'
-    #>sm: 'San Marino'
-    #>sn: 'Senegal'
-    #>so: 'Somalia'
-    #>sr: 'Suriname'
-    #>st: 'Sao Tome and Principe'
-    #>sv: 'El Salvador'
-    #>sy: 'Syrian Arab Republic'
-    #>sz: 'Swaziland'
-    #>tc: 'Turks and Caicos Islands'
-    #>td: 'Chad'
-    #>tf: 'French Southern Territories'
-    #>tg: 'Togo'
-    #>th: 'Thailand'
-    #>tj: 'Tajikistan'
-    #>tk: 'Tokelau'
-    #>tl: 'Timor-Leste'
-    #>tm: 'Turkmenistan'
-    #>tn: 'Tunisia'
-    #>to: 'Tonga'
-    #>tr: 'Turkey'
-    #>tt: 'Trinidad and Tobago'
-    #>tv: 'Tuvalu'
-    #>tw: 'Taiwan, Province of China'
-    #>tz: 'Tanzania, United Republic of'
-    #>ua: 'Ukraine'
-    #>ug: 'Uganda'
-    #>um: 'United States Minor Outlying Islands'
-    #>us: 'United States'
-    #>uy: 'Uruguay'
-    #>uz: 'Uzbekistan'
-    #>va: 'Holy See (Vatican City State)'
-    #>vc: 'Saint Vincent and the Grenadines'
-    #>ve: 'Venezuela, Bolivarian Republic of'
-    #>vg: 'Virgin Islands, British'
-    #>vi: 'Virgin Islands, U.S.'
-    #>vn: 'Viet Nam'
-    #>vu: 'Vanuatu'
-    #>wf: 'Wallis and Futuna'
-    #>ws: 'Samoa'
-    #>ye: 'Yemen'
-    #>yt: 'Mayotte'
-    #>za: 'South Africa'
-    #>zm: 'Zambia'
-    #>zw: 'Zimbabwe'
+    ad: 'علم أندورا أندورا'
+    ae: 'علم الإمارات العربية المتحدة الإمارات العربية المتحدة'
+    af: 'علم أفغانستان أفغانستان'
+    ag: 'علم أنتيغا وبربودا أنتيغا وبربودا'
+    ai: 'علم أنغويلا أنغويلا'
+    al: 'علم ألبانيا ألبانيا'
+    am: 'علم أرمينيا أرمينيا'
+    an: 'علم جزر الأنتيل الهولندية جزر الأنتيل الهولندية'
+    ao: 'علم أنغولا أنغولا'
+    aq: 'قالب:معطيات Antarctica'
+    ar: 'علم الأرجنتين الأرجنتين'
+    as: 'علم ساموا الأمريكية ساموا الأمريكية'
+    at: 'علم النمسا النمسا'
+    au: 'علم أستراليا أستراليا'
+    aw: 'علم أروبا أروبا'
+    ax: ' Aland Islands علم أولان أولان'
+    az: 'علم أذربيجان أذربيجان'
+    ba: 'علم البوسنة والهرسك البوسنة والهرسك'
+    bb: 'علم بربادوس بربادوس'
+    bd: 'علم بنغلاديش بنغلاديش'
+    be: 'علم بلجيكا بلجيكا'
+    bf: 'علم بوركينا فاسو بوركينا فاسو'
+    bg: 'علم بلغاريا بلغاريا'
+    bh: 'علم البحرين البحرين'
+    bi: 'علم بوروندي بوروندي'
+    bj: 'علم بنين بنين'
+    bl: ' Saint Barthelemy علم سان بارتليمي سان بارتليمي'
+    bm: 'علم جزر برمودا جزر برمودا'
+    bn: 'علم بروناي بروناي'
+    bo: 'علم بوليفيا بوليفيا'
+    br: 'علم البرازيل البرازيل'
+    bs: 'علم البهاما البهاما'
+    bt: 'علم بوتان بوتان'
+    bv: 'علم النرويج Bouvet Island'
+    bw: 'علم بوتسوانا بوتسوانا'
+    by: 'علم روسيا البيضاء روسيا البيضاء'
+    bz: 'علم بليز بليز'
+    ca: 'علم كندا كندا'
+    cc: 'علم جزر كوكس جزر كوكس'
+    cd: 'علم جمهورية الكونغو الديمقراطية جمهورية الكونغو الديمقراطية'
+    cf: 'علم جمهورية أفريقيا الوسطى جمهورية أفريقيا الوسطى'
+    cg: 'علم جمهورية الكونغو جمهورية الكونغو'
+    ch: 'علم سويسرا سويسرا'
+    ci: ' Cote d''Ivoire علم ساحل العاج ساحل العاج'
+    ck: 'علم جزر كوك جزر كوك'
+    cl: 'علم تشيلي تشيلي'
+    cm: 'علم الكاميرون الكاميرون'
+    cn: 'علم الصين الصين'
+    co: 'علم كولومبيا كولومبيا'
+    cr: 'علم كوستاريكا كوستاريكا'
+    cu: 'علم كوبا كوبا'
+    cv: 'علم الرأس الأخضر الرأس الأخضر'
+    cx: 'علم جزيرة عيد الميلاد جزيرة عيد الميلاد'
+    cy: 'علم قبرص قبرص'
+    cz: 'علم التشيك التشيك'
+    de: 'علم ألمانيا ألمانيا'
+    dj: 'علم جيبوتي جيبوتي'
+    dk: 'علم الدنمارك الدنمارك'
+    dm: 'علم دومينيكا دومينيكا'
+    do: 'علم جمهورية الدومنيكان جمهورية الدومنيكان'
+    dz: 'علم الجزائر الجزائر'
+    ec: 'علم إكوادور إكوادور'
+    ee: 'علم إستونيا إستونيا'
+    eg: 'علم مصر مصر'
+    eh: 'علم الصحراء الغربية الصحراء الغربية'
+    er: 'علم إرتيريا إرتيريا'
+    es: 'علم إسبانيا إسبانيا'
+    et: 'علم إثيوبيا إثيوبيا'
+    fi: 'علم فنلندا فنلندا'
+    fj: 'علم فيجي فيجي'
+    fk: 'قالب:معطيات Falkland Islands (Malvinas)'
+    fm: 'قالب:معطيات Micronesia, Federated States of'
+    fo: 'علم جزر فارو جزر فارو'
+    fr: 'علم فرنسا فرنسا'
+    ga: 'علم الغابون الغابون'
+    gb: 'علم المملكة المتحدة المملكة المتحدة'
+    gd: 'علم جرينادا جرينادا'
+    ge: 'علم جورجيا جورجيا'
+    gf: 'علم جويانا الفرنسية جويانا الفرنسية'
+    gg: 'علم جزيرة جيرنزي جزيرة جيرنزي'
+    gh: 'علم غانا غانا'
+    gi: 'علم جبل طارق جبل طارق'
+    gl: 'علم جرينلاند جرينلاند'
+    gm: 'علم غامبيا غامبيا'
+    gn: 'علم غينيا غينيا'
+    gp: 'علم جزر جوادلوب جزر جوادلوب'
+    gq: 'علم غينيا الاستوائية غينيا الاستوائية'
+    gr: 'علم اليونان اليونان'
+    gs: 'علم جورجيا الجنوبية وجزر ساندويتش الجنوبية جورجيا الجنوبية وجزر ساندويتش الجنوبية'
+    gt: 'علم غواتيمالا غواتيمالا'
+    gu: 'علم جوام جوام'
+    gw: 'علم غينيا بيساو غينيا بيساو'
+    gy: 'علم غويانا غويانا'
+    hk: 'علم هونغ كونغ هونغ كونغ'
+    hm: 'علم أستراليا Heard Island and McDonald Islands'
+    hn: 'علم هندوراس هندوراس'
+    hr: 'علم كرواتيا كرواتيا'
+    ht: 'علم هايتي هايتي'
+    hu: 'علم المجر المجر'
+    id: 'علم إندونسيا إندونسيا'
+    ie: 'علم أيرلندا أيرلندا'
+    il: 'علم إسرائيل إسرائيل'
+    im: 'علم جزيرة مان جزيرة مان'
+    in: 'علم الهند الهند'
+    io: 'علم إقليم المحيط الهندي البريطاني إقليم المحيط الهندي البريطاني'
+    iq: 'علم العراق العراق'
+    ir: 'علم إيران إيران'
+    is: 'علم أيسلندا أيسلندا'
+    it: 'علم إيطاليا إيطاليا'
+    je: 'علم جزيرة جيرزي جزيرة جيرزي'
+    jm: 'علم جامايكا جامايكا'
+    jo: 'علم الأردن الأردن'
+    jp: 'علم اليابان اليابان'
+    ke: 'علم كينيا كينيا'
+    kg: 'علم قيرغيزستان قيرغيزستان'
+    kh: 'علم كمبوديا كمبوديا'
+    ki: 'علم كيريباس كيريباس'
+    km: 'علم جزر القمر جزر القمر'
+    kn: 'علم سانت كيتس ونيفيس سانت كيتس ونيفيس'
+    kp: 'علم كوريا الشمالية كوريا الشمالية'
+    kr: 'علم كوريا الجنوبية كوريا الجنوبية'
+    kw: 'علم الكويت الكويت'
+    ky: 'علم جزر كايمان جزر كايمان'
+    kz: 'علم كازاخستان كازاخستان'
+    la: 'علم لاوس لاوس'
+    lb: 'علم لبنان لبنان'
+    lc: 'علم سانت لوسيا سانت لوسيا'
+    li: 'علم ليختنشتاين ليختنشتاين'
+    lk: 'علم سريلانكا سريلانكا'
+    lr: 'علم ليبيريا ليبيريا'
+    ls: 'علم ليسوتو ليسوتو'
+    lt: 'علم ليتوانيا ليتوانيا'
+    lu: 'علم لوكسمبورغ لوكسمبورغ'
+    lv: 'علم لاتفيا لاتفيا'
+    ly: 'علم ليبيا ليبيا'
+    ma: 'علم المغرب المغرب'
+    mc: 'علم موناكو موناكو'
+    md: 'علم مولدافيا مولدافيا'
+    me: 'علم الجبل الأسود الجبل الأسود'
+    mf: 'قالب:معطيات Saint Martin (French part)'
+    mg: 'علم مدغشقر مدغشقر'
+    mh: 'علم جزر مارشال جزر مارشال'
+    mk: 'علم جمهورية مقدونيا جمهورية مقدونيا'
+    ml: 'علم مالي مالي'
+    mm: 'علم ميانمار ميانمار'
+    mn: 'علم منغوليا منغوليا'
+    mo: 'علم ماكاو ماكاو'
+    mp: 'علم جزر ماريانا الشمالية جزر ماريانا الشمالية'
+    mq: 'علم مارتينيك مارتينيك'
+    mr: 'علم موريتانيا موريتانيا'
+    ms: 'علم مونتسرات مونتسرات'
+    mt: 'علم مالطا مالطا'
+    mu: 'علم موريشيوس موريشيوس'
+    mv: 'علم مالديف مالديف'
+    mw: 'علم ملاوي ملاوي'
+    mx: 'علم المكسيك المكسيك'
+    my: 'علم ماليزيا ماليزيا'
+    mz: 'علم موزمبيق موزمبيق'
+    na: 'علم ناميبيا ناميبيا'
+    nc: 'علم كاليدونيا الجديدة كاليدونيا الجديدة'
+    ne: 'علم النيجر النيجر'
+    nf: 'علم جزيرة نورفولك جزيرة نورفولك'
+    ng: 'علم نيجيريا نيجيريا'
+    ni: 'علم نيكاراغوا نيكاراغوا'
+    nl: 'علم هولندا هولندا'
+    no: 'علم النرويج النرويج'
+    np: 'علم نيبال نيبال'
+    nr: 'علم ناورو ناورو'
+    nu: 'علم نييوي نييوي'
+    nz: 'علم نيوزيلندا نيوزيلندا'
+    om: 'علم سلطنة عمان سلطنة عمان'
+    pa: 'علم بنما بنما'
+    pe: 'علم بيرو بيرو'
+    pf: 'علم بولينسيا الفرنسية بولينسيا الفرنسية'
+    pg: 'علم بابوا غينيا الجديدة بابوا غينيا الجديدة'
+    ph: 'علم الفلبين الفلبين'
+    pk: 'علم باكستان باكستان'
+    pl: 'علم بولندا بولندا'
+    pm: 'علم سان بيار وميكلون سان بيار وميكلون'
+    pn: 'علم جزر بيتكيرن جزر بيتكيرن'
+    pr: 'علم بورتو ريكو بورتو ريكو'
+    ps: 'علم فلسطين فلسطين'
+    pt: 'علم البرتغال البرتغال'
+    pw: 'علم بالاو بالاو'
+    py: 'علم باراغواي باراغواي'
+    qa: 'علم قطر قطر'
+    re: ' Reunion علم ريونيون ريونيون'
+    ro: 'علم رومانيا رومانيا'
+    rs: 'علم صربيا صربيا'
+    ru: 'علم روسيا روسيا'
+    rw: 'علم رواندا رواندا'
+    sa: 'علم المملكة العربية السعودية المملكة العربية السعودية'
+    sb: 'علم جزر سليمان جزر سليمان'
+    sc: 'علم سيشيل سيشيل'
+    sd: 'علم السودان السودان'
+    se: 'علم السويد السويد'
+    sg: 'علم سنغافورة سنغافورة'
+    sh: 'علم سانت هلينا سانت هلينا'
+    si: 'علم سلوفينيا سلوفينيا'
+    sj: 'علم النرويج Svalbard and Jan Mayen'
+    sk: 'علم سلوفاكيا سلوفاكيا'
+    sl: 'علم سيراليون سيراليون'
+    sm: 'علم سان مارينو سان مارينو'
+    sn: 'علم السنغال السنغال'
+    so: 'علم الصومال الصومال'
+    sr: 'علم سورينام سورينام'
+    st: 'علم ساو تومي وبرينسيبي ساو تومي وبرينسيبي'
+    sv: 'علم إلسلفادور إلسلفادور'
+    sy: 'علم سوريا سوريا'
+    sz: 'علم سوازيلند سوازيلند'
+    tc: 'علم جزر تركس وكايكوس جزر تركس وكايكوس'
+    td: 'علم تشاد تشاد'
+    tf: 'قالب:معطيات French Southern Territories'
+    tg: 'علم توجو توجو'
+    th: 'علم تايلاند تايلاند'
+    tj: 'علم طاجيكستان طاجيكستان'
+    tk: 'علم توكلو توكلو'
+    tl: 'علم تيمور الشرقية تيمور الشرقية'
+    tm: 'علم تركمانستان تركمانستان'
+    tn: 'علم تونس تونس'
+    to: 'علم تونغا تونغا'
+    tr: 'علم تركيا تركيا'
+    tt: 'علم ترينيداد وتوباغو ترينيداد وتوباغو'
+    tv: 'علم توفالو توفالو'
+    tw: 'علم تايوان تايوان'
+    tz: 'علم تنزانيا تنزانيا'
+    ua: 'علم أوكرانيا أوكرانيا'
+    ug: 'علم أوغندا أوغندا'
+    um: 'Flag of the United States United States Minor Outlying Islands'
+    us: 'Flag of the United States الولايات المتحدة'
+    uy: 'علم أوروجواي أوروجواي'
+    uz: 'علم أوزبكستان أوزبكستان'
+    va: 'قالب:معطيات Holy See (Vatican City State)'
+    vc: 'علم سانت فنسينت والجرينادينز سانت فنسينت والجرينادينز'
+    ve: 'علم فنزويلا فنزويلا'
+    vg: 'قالب:معطيات Virgin Islands, British'
+    vi: 'قالب:معطيات Virgin Islands, U.S.'
+    vn: 'علم فيتنام فيتنام'
+    vu: 'علم فانواتو فانواتو'
+    wf: 'علم والس وفوتونا والس وفوتونا'
+    ws: 'علم ساموا ساموا'
+    ye: 'علم اليمن اليمن'
+    yt: 'علم مايوطه مايوطه'
+    za: 'علم جنوب أفريقيا جنوب أفريقيا'
+    zm: 'علم زامبيا زامبيا'
+    zw: 'علم زمبابوي زمبابوي '
