--- a/config/locales/arb/support.yml
+++ b/config/locales/arb/support.yml
@@ -9,45 +9,45 @@ arb:
     #>abbr_month_names: ['', 'jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']
     #>day_names: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
     formats:
-      #>default: '%m/%d/%Y'
-      #>legal: '%d %B %Y'
-      #>long: '%B %d, %Y'
-      #>month_letter: '%d %B %Y'
-      #>short: '%b %d'
+      default: '%m/%d/%Y'
+      legal: '%d %B %Y'
+      long: '%B %d, %Y'
+      month_letter: '%d %B %Y'
+      short: '%b %d'
     #>month_names: ['', 'january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december']
     #>order: [:month, :day, :year]
   datetime:
     distance_in_words:
       about_x_hours:
-        #>many: 'about {{count}} hours'
+        #>many: 'about %{count} hours'
         #>one: 'about 1 hour'
       about_x_months:
-        #>many: 'about {{count}} months'
+        #>many: 'about %{count} months'
         #>one: 'about 1 month'
       about_x_years:
-        #>many: 'about {{count}} years'
+        #>many: 'about %{count} years'
         #>one: 'about 1 year'
       #>half_a_minute: 'half a minute'
       less_than_x_minutes:
-        #>many: 'less than {{count}} minutes'
+        #>many: 'less than %{count} minutes'
         #>one: 'less than a minute'
       less_than_x_seconds:
-        #>many: 'moins de {{count}} secondes'
+        #>many: 'moins de %{count} secondes'
         #>one: 'moins d''une seconde'
       over_x_years:
-        #>many: 'over {{count}} years'
+        #>many: 'over %{count} years'
         #>one: 'over 1 year'
       x_days:
-        #>many: '{{count}} days'
+        #>many: '%{count} days'
         #>one: '1 day'
       x_minutes:
-        #>many: '{{count}} minutes'
+        #>many: '%{count} minutes'
         #>one: '1 minute'
       x_months:
-        #>many: '{{count}} months'
+        #>many: '%{count} months'
         #>one: '1 month'
       x_seconds:
-        #>many: '{{count}} secondes'
+        #>many: '%{count} secondes'
         #>one: '1 seconde'
   dyta:
     export:
@@ -88,9 +88,9 @@ arb:
       #>two_words_connector: ', '
       #>words_connector: ', '
   time:
-    #>am: 'am'
+    am: 'am'
     formats:
-      #>default: '%b. %d, %Y at %H:%M:%S'
-      #>long: '%B %d, %Y %H:%M'
-      #>short: '%d %b %H:%M'
-    #>pm: 'pm'
+      default: '%b. %d, %Y at %H:%M:%S'
+      long: '%B %d, %Y %H:%M'
+      short: '%d %b %H:%M'
+    pm: 'pm'
